--- a/DemoMVC.WebUi/Views/UserExam/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserExam/Index.cshtml
@@ -98,8 +98,7 @@
                 if (response.success) {
                     let generatedLink = response.link;
                     Swal.fire({
-                        title: "Generated Link",
-                        text: generatedLink,
+                        title: "Are You Sure Want To Send Link",
                         icon: "success",
                         showCancelButton: true,
                         confirmButtonText: "Send Email",
