--- a/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
@@ -20,6 +20,7 @@
     <h2 class="fw-bold mx-3 ">Users</h2>
     <div>
         @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
+        @Html.ActionLink("Export Excel", "ExportUserProfiles", null, new { @class = "btn btn-success btn rounded-pill px-4 shadow-sm fw-bold m-3" })
     </div>
 </div>
 <div class="common_white_box listingpage m-4">
